tests/valid/teste_declacao.lang
// Declaração e atribuição simples

int a;
a = 10;
printf(a);
