tests/invalid/sintaxe_ponto_virgula.lang
int a
a = 10 // Faltou o ponto e vírgula
printf(a);